Fix css title and spacing on Product View

--- a/src/components/product-view/product-view.css
+++ b/src/components/product-view/product-view.css
@@ -36,7 +36,7 @@
 }
 
 .product-view__title {
-    height: 50px;
+    min-height: 50px;
     margin: 16px 0px;
 }
 
@@ -114,8 +114,8 @@
 
 .product-view__buy-btn-group {
     display: grid;
-    grid-template-columns: repeat(2, calc(50% - 8px));
-    grid-gap: 16px;
+    grid-template-columns: repeat(2, calc(50% - 1px));
+    grid-gap: 2px;
     box-sizing: border-box;
 }
 
@@ -178,5 +178,10 @@
         display: grid;
         grid-gap: 16px;
         grid-template-columns: 320px auto;
+    }
+
+    .product-view__buy-btn-group {    
+        grid-template-columns: repeat(2, calc(50% - 8px));
+        grid-gap: 16px;
     }
 }
